objects/CC_Liveagent_Language_Rules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Button_Ids__c</fullName>
        <label>Button Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Customer Care LiveAgent Language Rules</label>
    <listViews>
        <fullName>All_Rules</fullName>
        <columns>NAME</columns>
        <columns>Button_Ids__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
        <language>en_US</language>
    </listViews>
</CustomObject>